syntax = "proto3";

import "google/protobuf/timestamp.proto";

package smscode;

service Smscode {
    rpc CreateVerificationCode(CreateVerificationCodeRequest) returns (CreateVerificationCodeResult) {}
    rpc CheckVerificationCode(CheckVerificationCodeRequest) returns (CheckVerificationCodeResult) {}
}

message CreateVerificationCodeRequest {
    string phoneNumber = 1;
}

message CreateVerificationCodeResult {
    string code = 1;
}

message CheckVerificationCodeRequest {
    string phoneNumber = 1;
    string code = 2;
}

message CheckVerificationCodeResult {
    bool success = 1;
}

message SmscodeModel {
    string phoneNumber = 1;
    string code = 2;
    google.protobuf.Timestamp createAt = 3;
}